--- a/HTML/11.images.html
+++ b/HTML/11.images.html
@@ -11,7 +11,7 @@ The src attribute specifies the URL (web address) of the image:
 <img src="flowers.jpg" alt="Flowers in india" width="460" height="345">
 <!-- Note: The alt attribute is required. A web page will not validate correctly without it. -->
 
-<!-- <p>Style attribute will also give me the same result to set width and height of an image</p>
+ jm< jm!- -jm  jm<p> jm jm jm jm jm ``Style attribute will also give me the same result to set width and height of an image</p>
 <img src="flowers.jpg" alt="Flowers in India" style="width:460px;height:345px;"> -->
 
 <!-- Image as a link -->
