--- a/css/intro/Header.html
+++ b/css/intro/Header.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Debasish Sahoo" />
     <meta http-equiv="refresh" content="30" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Head Element</title>
+    <title>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, culpa? Dolorum officiis ad, cupiditate quaerat impedit tempore vel possimus sit, nostrum illo, obcaecati ipsum incidunt praesentium! Ullam excepturi iure praesentium.</title>
 
     <link rel="stylesheet" href="./style.css" />
 
@@ -33,10 +33,6 @@
         <a href="contact.html">Contact us</a>
       </nav>
       <br/>
-      <form target="/search">
-        <input name="q" type="search" />
-        <input type="submit" />
-      </form>
     </header>
 
     <hgroup>
