--- a/css/Basic/1_selector.html
+++ b/css/Basic/1_selector.html
@@ -12,22 +12,18 @@
     <p class="cls">css</p>
     <p id="ide">javascript</p>
     <p id="ide" class="cls">Bootstrap</p>
+    <p class="cls" id="ide">Bootstrap</p>
     <hr />
 
     <!-- attribute selector -->
     <p><a href="abc.com"> Go to abc.com </a></p>
     <p><a href="xyz.id"> Go to xyz.id </a></p>
-
-
     <hr>
     <!-- grouping -->
     <b>This is bold</b><br>
     <i>This is italic</i><br>
     <u>This is underline</u>
     <br>
-
-
-
     <h3>
         This is heading 3 outside the header
     </h3>
