--- a/css/Basic/2_pseudo.html
+++ b/css/Basic/2_pseudo.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="./2_pseudo.css"/>
+
 </head>
 <body>
-    <h3>This is the first h3</h3>
-    <h3>This is the second h3</h3>
-    <h3>This is the third h3</h3>
-    <h3>This is the fourth h3</h3>
-    <h3>This is the fifth h3</h3>
+    <h3>This is Heading One</h3>
+    <h3>This is Heading Two</h3>
+    <h3>This is Heading Three</h3>
+    <h3>This is Heading Four</h3>
+    <h3>This is Heading Five</h3>
+
+    <hr/>
+
+    <h1>This is Heading One</h1>
+
+    <input type="text" 
+    placeholder="Input name...">
+    <input type="text" 
+    placeholder="Input age...">
+    <input type="text" 
+    placeholder="Input City ...">
+    <input type="submit" 
+    value="Click me!">
 </body>
 </html>
