--- a/css/Basic/0.html
+++ b/css/Basic/0.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Css</title>
-    <!---External Style-->
-    <link rel="stylesheet" type="text/css" href="./0.css" />
-
-    <!--Internal Style-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Test CSS</title>
+    <!-- internal styling -->
     <style>
         h2 {
-            color: blue;
+            color: lightblue;
             background-color: lightcoral;
         }
     </style>
-
-
+    <!-- external styling -->
+    <link rel="stylesheet" type="text/css" href="0.css">
 </head>
-
 <body>
-    <h1 style="color: red;background-color: yellow;">This is Heading One</h1>
+    <!-- inline styling -->
+    <h1 style="color:red; background-color: yellow;">
+        This is Heading One
+    </h1>
     <h2>This is Heading Two</h2>
-    <h3>This is Heading Three</h3>
+    <h3>This is Heading Three</h3> 
 </body>
-
 </html>
