--- a/css/Basic/3_props.html
+++ b/css/Basic/3_props.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./3_props.css"/>
-    
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Test CSS</title>
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="3_props.css"
+    >
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>CSS Properties</h1>
     <p id="p1">Paragraph 1</p>
     <p id="p2">Paragraph 2</p>
-    <br/>
-    <h3>Test text</h3>
-    <br/>
-    <div class="area">
-        Box Model
-    </div>
+    <br>
 
+    <h3>Test text</h3>
+    <br>
+
+    <div class="area">
+        Test area
+    </div>
+    <br><br><br><br><br>
 
 </body>
 </html>
