--- a/css/Basic/1_selector.html
+++ b/css/Basic/1_selector.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./1_selector.css" />
-  </head>
-  <body>
-    <!--NORMAL SELECTOR(CLASS,ID,TAG)-->
-    <p>html</p>
-    <p class="cls">css</p>
-    <p id="ide">javascript</p>
-    <p id="ide" class="cls">Bootstrap</p>
-    <p class="cls" id="ide">Bootstrap</p>
-    <hr />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>test CSS</title>
+    <link
+        rel="stylesheet"
+        type="text/css"
+        href="1_selector.css"
+    >
+</head>
+<body>
+    <!-- tag class id selector -->
+    <p>Andy</p>
+    <p class="student">Bob</p>
+    <p class="student" 
+    id="Christen">
+        Christen
+    </p>
+
+    <hr>
 
     <!-- attribute selector -->
-    <p><a href="abc.com"> Go to abc.com </a></p>
-    <p><a href="xyz.id"> Go to xyz.id </a></p>
+    <p><a href="abc.com">
+        Go to abc.com
+    </a></p>
+    <p><a href="xyz.id">
+        Go to xyz.id
+    </a></p>
+
     <hr>
     <!-- grouping -->
     <b>This is bold</b><br>
     <i>This is italic</i><br>
-    <u>This is underline</u>
-    <br>
+    <ins>This is underline</ins><br>
+
+    <hr>
+    <!-- descendant selector -->
     <h3>
         This is heading 3 outside the header
     </h3>
@@ -31,7 +45,6 @@
         <h3>This is heading 3 in the header</h3>
         <p>This is the paragraph in the header</p>
     </header>
-
 
     <!-- child selector -->
     <hr>
@@ -42,19 +55,15 @@
         </main>
     </article>
 
+    <!-- adjacent selector -->
+    <hr>
+    <h6>This is heading 6</h6>
+    <small>Andy</small>
+    <small>Bob</small>
+    <small>Christen</small>
+    <small>Danny</small>
 
+    <br><br><br><br><br><br><br>
 
-     <!-- adjacent selector -->
-     <hr>
-     <h6>This is heading 6</h6>
-     <small>Andy</small>
-     <small>Bob</small>
-     <small>Christen</small>
-     <small>Danny</small>
- 
-     <br><br><br><br><br><br><br>
-
-
-
-  </body>
+</body>
 </html>
