Add new Program

--- a/CSS3/BoxModel/index.html
+++ b/CSS3/BoxModel/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   
-    <div></div>
+    <h1 class="container">Box Model</h1>
+    <p class="container">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sint modi
+      beatae, ipsum neque architecto, nisi omnis id est, quam doloribus quia
+      dolore harum. Necessitatibus animi blanditiis iusto dolorum totam.
+    </p>
+    <div class="circle"></div>
   </body>
 </html>
