--- a/CSS3/Color/index.html
+++ b/CSS3/Color/index.html
@@ -8,6 +8,36 @@
     <title>Color</title>
   </head>
   <body>
-   
+    <h1>CSS Color</h1>
+    <h2>Topic 1</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
+    <h2>Topic 2</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
+    <h2>Topic 3</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
   </body>
 </html>
