--- a/CSS3/Column/index.html
+++ b/CSS3/Column/index.html
@@ -8,6 +8,32 @@
     <title>Column</title>
   </head>
   <body>
-    
+    <section class="columns">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+        veritatis et deserunt molestiae est distinctio ex eveniet, rem ratione
+        sapiente?
+      </p>
+      <p>
+        Odit unde ullam explicabo minima beatae voluptate ut consectetur
+        voluptatibus molestias itaque cupiditate nemo, deserunt cumque sunt
+        dolor! Autem, eum!
+      </p>
+      <h2>Column</h2>
+      <p class="quote">"I am BATMAN" <span class="nowrap"> -Batman</span></p>
+      <p>
+        Officia exercitationem ipsa voluptate eaque sunt soluta eum ducimus ad
+        dolores, quisquam quos incidunt, quasi enim rerum itaque ex rem!
+      </p>
+      <p>
+        Aperiam ratione ut optio dolorum veniam rerum. Inventore neque a
+        necessitatibus qui nemo ullam error ad fuga, vitae quisquam corporis.
+      </p>
+    </section>
+    <p>
+      Placeat, pariatur natus libero porro iusto temporibus et debitis facere
+      praesentium sequi eius voluptas similique, obcaecati, harum exercitationem
+      ipsum dolore!
+    </p>
   </body>
 </html>
