--- a/CSS3/DisplayProperty/index.html
+++ b/CSS3/DisplayProperty/index.html
@@ -8,5 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <!-- <p>This is the paragraph</p>
+      <p>This is the <span class="inline_element">another</span> paragraph</p>
+    -->
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </nav>
+    </main>
   </body>
 </html>
