--- a/CSS3/HyperLink/index.html
+++ b/CSS3/HyperLink/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   
+    <h1>Hyper Link</h1>
+    <p>
+      Default link have blue color and underline:
+      <a href="www.google.com">Google</a>
+    </p>
+    <p>
+      Visited link have purple color and underline:
+      <a href="www.google.com">Google</a>
+    </p>
+    <p>
+      Active link have red color and underline:
+      <a href="www.google.com">Google</a>
+    </p>
+    <p><a href="www.google.com">Google</a></p>
+    <p><a href="www.google.com">Google</a></p>
   </body>
 </html>
