--- a/CSS3/ListStyle/index.html
+++ b/CSS3/ListStyle/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   
+    <h1>List Style</h1>
+    <article>
+      <ol start="3" reversed>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+        <li>Item Four</li>
+        <li>Item Five</li>
+        <li>Item Five</li>
+      </ol>
+    </article>
+    <article>
+      <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+        <li>Item Four</li>
+        <li>Item Five</li>
+      </ul>
+    </article>
   </body>
 </html>
