--- a/CSS3/MiniCSSProject/index.html
+++ b/CSS3/MiniCSSProject/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <button class="social">🚀</button>
+    <section id="one">
+      <header class="blue">Header One</header>
+      <h2>One</h2>
+    </section>
+    <section id="two">
+      <header class="red">Header Two</header>
+      <h2>Two</h2>
+    </section>
+    <section id="three">
+      <header class="green">Header Three</header>
+      <h2>Three</h2>
+    </section>
+    <footer>
+      <a href="#one">One</a>
+      <a href="#two">Two</a>
+      <a href="#three">Three</a>
+    </footer>
   </body>
 </html>
