--- a/CSS3/PositionProperty/index.html
+++ b/CSS3/PositionProperty/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <div class="outer-container">
+      <div class="inner-container">
+        <div class="box absolute">
+          <p>Absolute</p>
+        </div>
+        <div class="box relative">
+          <p>Relative</p>
+        </div>
+        <div class="box fixed">
+          <p>Fixed</p>
+        </div>
+        <div class="box sticky">
+          <p>Sticky</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
