--- a/CSS3/Selector/index.html
+++ b/CSS3/Selector/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>CSS Selector</h1>
+    <h2>Topic 1</h2>
+    <p class="green">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
+
+    <h2>Topic 2</h2>
+    <p id="blue">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
     
+    <h2>Topic 3</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere
+      <br />
+      accusamus voluptatem! Quo minus praesentium maiores cupiditate neque eos
+      <br />
+      architecto, quisquam ipsum omnis voluptate et optio consequuntur rem nisi
+      <br />
+      error.
+    </p>
   </body>
 </html>
