--- a/CSS3/Typography/index.html
+++ b/CSS3/Typography/index.html
@@ -11,6 +11,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
-   
+    <header>
+      <h1>Typography</h1>
+    </header>
+    <main>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sed
+        vero cumque necessitatibus deserunt nemo tempore itaque quo, fugiat
+        voluptatem expedita voluptatibus explicabo debitis perspiciatis facere
+        iusto, magnam aliquam tempora.
+      </p>
+      <!-- <form action="">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" placeholder="Type your name" />
+        <button type="submit">Submit</button>
+      </form> -->
+    </main>
   </body>
 </html>
