--- a/CSS3/Grid/index.html
+++ b/CSS3/Grid/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   
+    <header class="header element">
+      <h1>Header</h1>
+    </header>
+    <main class="container">
+      <div class="box">1</div>
+      <div class="box">2</div>
+      <div class="box">3</div>
+      <div class="box">4</div>
+      <div class="box">5</div>
+      <div class="box">6</div>
+    </main>
+    <aside class="sidebar element">
+      <h2>Sidebar</h2>
+    </aside>
+    <footer class="footer element">
+      <h2>Footer</h2>
+    </footer>
   </body>
 </html>
