--- a/full javascript/Day1/index.html
+++ b/full javascript/Day1/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>This Javascript Day 1</h1>
     <p>Javascript Variable is Started</p>
-    <script src="./nonprivative.js"></script>
+    <script src="./02.datatype/string_2.js"></script>
 </body>
 </html
