--- a/full javascript/index.html
+++ b/full javascript/index.html
@@ -11,6 +11,8 @@
         <li>Operator</li>
         <li>Date-Time</li>
     </ul>
+    <script src="./Day2/alert.js"></script>
+    <script src="./Day2/prompt.js"></script>
     <script src="./Day2/bool.js"></script>
     <script src="./Day2/date.js"></script>
     <script src="./Day2/operator.js"></script>
