New Update of Javascript

--- a/full javascript/index.html
+++ b/full javascript/index.html
@@ -11,10 +11,11 @@
         <li>Operator</li>
         <li>Date-Time</li>
     </ul>
-    <script src="./Day2/alert.js"></script>
-    <script src="./Day2/prompt.js"></script>
-    <script src="./Day2/bool.js"></script>
-    <script src="./Day2/date.js"></script>
-    <script src="./Day2/operator.js"></script>
+    <!-- <script src="./Day2/alert.js"></script> -->
+    <!-- <script src="./Day2/prompt.js"></script> -->
+    <!-- <script src="./Day2/bool.js"></script> -->
+    <!-- <script src="./Day2/date.js"></script> -->
+    <!-- <script src="./Day2/operator.js"></script> -->
+    <script src="./Day3/array.js"></script>
 </body>
 </html>
