Javascript loop Commit

--- a/full javascript/index.html
+++ b/full javascript/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day2</title>
+    <link rel="stylesheet" href="./Day4-demo/style.css"/>
 </head>
 <body>
-    <ul>
-        <li>Boolean</li>
-        <li>Operator</li>
-        <li>Date-Time</li>
-    </ul>
-    <!-- <script src="./Day2/alert.js"></script> -->
-    <!-- <script src="./Day2/prompt.js"></script> -->
-    <!-- <script src="./Day2/bool.js"></script> -->
-    <!-- <script src="./Day2/date.js"></script> -->
-    <!-- <script src="./Day2/operator.js"></script> -->
-    <script src="./Day3/array.js"></script>
+    <article>
+        <p>I am Inside Article 1</p>
+        <p>I am Inside Article 2</p>
+        <p>I am Inside Article 3</p>
+        <p>I am Inside Article 4</p>
+    </article>
+    <div>
+        <p>I am Inside div 1</p>
+        <p>I am Inside div 2</p>
+        <p>I am Inside div 3</p>
+    </div>
+     <script src="./day4/for-of.js"></script>
 </body>
 </html>
