--- a/full javascript/index.html
+++ b/full javascript/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day2</title>
-    <link rel="stylesheet" href="./Day4-demo/style.css"/>
+    <link rel="stylesheet" href="./Day4/style.css"/>
 </head>
 <body>
     <article>
@@ -18,6 +18,6 @@
         <p>I am Inside div 2</p>
         <p>I am Inside div 3</p>
     </div>
-     <script src="./day4/for-of.js"></script>
+     <script src="./Day5/Higer_Order_Function.js"></script>
 </body>
 </html>
