--- a/full javascript/index.html
+++ b/full javascript/index.html
@@ -18,6 +18,6 @@
         <p>I am Inside div 2</p>
         <p>I am Inside div 3</p>
     </div>
-     <script src="./Day5/Higer_Order_Function.js"></script>
+     <script src="./Day5/function.js"></script>
 </body>
 </html>
